Initial commit: SoccerX React Native app with authentication, matches, players, favorites, and AI assistant

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Sportify",
-    "slug": "Sportify",
+    "name": "SoccerX",
+    "slug": "SoccerX",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
